--- a/assets/css/shakazz.css
+++ b/assets/css/shakazz.css
@@ -3,6 +3,27 @@
 	background-color:#0e251d;
 	color:white;
 }
+.home_page_section_shakazz_jumbotron{
+	background-color:transparent !important;
+	margin-bottom:0;
+	margin:auto !important;
+	margin-top:5em !important;
+	width:60em;
+}
+.home_page_section_shakazz_jumbotron h1{
+	font-size:2.5em;
+	color:white;
+}
+.home_page_section_shakazz_jumbotron button{
+	background-color:#cc9933;
+	color:black;
+	border:1px solid #cc9933 !important; 
+}
+.home_page_section_shakazz_jumbotron button:hover{
+	background-color:white;
+	color:black;
+	border:1px solid white !important; 
+}
 .home_page_section_presentation{
 	height:35em;
 	padding-top:8em !important;
@@ -92,7 +113,38 @@
 	padding-left:6em !important;
 	background-color:white !important;
 	border-radius:0 !important;
-
+	text-align:center;
+}
+.home_page_section_plans button{
+	margin-bottom:2em !important;
+	background-color:white;
+	border-radius:18px;
+	border:1px solid #e5e5e5;
+	color:black;
+}
+.home_page_section_plans p{
+	opacity:0.6;
+}
+.home_page_section_plans div{
+	border:none !important;
+}
+.home_page_section_plans_buttonlink{
+	background-color:#cc9933 !important;
+	color:white;
+	border:0px solid white !important;
+	color:white !important;
+	border-radius:4px !important;
+}
+.home_page_section_plans_div{
+	border:1px solid #e5e5e5;
+	border-radius:4px;
+	padding-left:1em;
+	padding-right:1em;
+}
+.home_page_section_plans button:hover{
+	margin-bottom:2em !important;
+	background-color:#244230 !important;
+	border:1px solid #244230;
 }
 .home_page_section_plans h1{
 	color:black;
@@ -102,7 +154,7 @@
 	height:25em;
 	width:80%;
 	margin:auto;
-	margin-top:6em;
+	margin-top:10em;
 	padding-top:2em !important;
 	padding-left:6em !important;
 	background-color:#f5f5f5 !important;
@@ -118,7 +170,7 @@
 	font-size:2.5em;
 }
 .home_page_section_started{
-	height:20em;
+	height:21em;
 	width:80%;
 	margin:auto;
 	background-color:#24422f !important;
@@ -131,7 +183,7 @@
 	color:black;
 }
 .home_page_section_started_jumbotron{
-	height:100%;
+	height:21em;
 	width:100%;
 	text-align:center;
 	margin-top:0 !important;
@@ -139,6 +191,80 @@
 	border-radius:0 !important;
 	margin-bottom:0 !important;
 }
+.home_page_section_started_jumbotron button{
+	background-color:white !important;
+	border-radius:20px;
+	border:2px solid black;
+	color:black;
+}
+.home_page_section_started_jumbotron button:hover{
+	background-color:#244230 !important;
+	border-radius:8px;
+	border:2px solid white;
+}
 .home_page_section_started_col1{
-	padding:2em;
+	height:19em;
+}
+.home_page_section_started_col1 iframe{
+	width:100% !important;
+	height:100% !important;
+	margin:1em !important;
+}
+.home_page_footer{
+	background-color:#333333 !important;
+	color:white !important;
+}
+.home_page_footer_nav{
+	background-color:#333333 !important;
+	color:white !important
+}
+.home_page_footer_first{
+	height:20em !important;
+	padding-left:6em !important;
+	padding-right:6em !important;
+	padding-top:3em !important;
+	display:flex;
+	justify-content:space-between;
+}
+.home_page_footer_last{
+	border-top:1px solid #e5e5e5;
+	padding-left:6em !important;
+	padding-right:6em !important;
+}
+.home_page_footer_last p{
+	background-color:#333333 !important;
+	font-size:1em;
+	opacity:0.3;
+}
+.home_page_footer_first h1 {
+  color:white;
+}
+.home_page_footer_first h2 {
+  color:white;
+}
+.home_page_footer_first ul {
+  list-style-type: none;
+  margin: 0;
+  width: 23%;
+}
+
+.home_page_footer_first li {
+  float: left;
+  font-size:1em;
+  left:2em;
+  margin-top:1em;
+  color:white;
+  opacity:0.6;
+}
+
+.home_page_footer_first li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.home_page_footer_first h5{
+	font-size:0.65em;
+	color:white;
 }
